cargo-features = ["profile-rustflags"]

[package]
name = "boss"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }
spin = "0.9.8"
log = "0.4.20"
uefi = "0.26.0"
bitfield-struct = "0.5.6"
anyhow = { version = "1.0.79", default-features = false }
derive_more = "0.99.17"
paste = "1.0.15"
