[package]
name = "boss_boot"
version = "0.1.0"
edition = "2024"

[dependencies]
boss_common = { path = "../boss_common" }
log = { workspace = true }
miniz_oxide = { workspace = true }
spin = { workspace = true }
uefi = { workspace = true }
bincode = { workspace = true }

[features]
log-trace = []
trace-pmm = ["boss_common/trace-pmm"]
trace-malloc = ["boss_common/trace-malloc"]
trace-hal-video = ["boss_common/trace-hal-video"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(boss_target, values("x86_64-uefi"))'] }