[package]
name = "boss_common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = { workspace = true }
bitflags = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
strum = { workspace = true }
uefi = { workspace = true }
hashbrown = { workspace = true }
bincode = { workspace = true }
itertools = { workspace = true }

[features]
# Traces allocation and deallocation of pages by the physical memory manager
trace-pmm = []
# Traces heap allocations and deallocations
trace-malloc = []
# Traces video module
trace-hal-video = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(boss_target, values("x86_64-uefi"))'] }
