[package]
name = "boss_emu"
version = "0.1.0"
edition = "2021"

[dependencies]
boss_common = { path = "../boss_common" }
log = { workspace = true }
uefi = { workspace = true }
spin = "0.9.8"
hashbrown = "0.14"
miniz_oxide = "0.7.4"
num-bigint = { version = "0.4", default-features = false }
strum_macros = { version = "0.26", default-features = false }

[build-dependencies]
regex = "1.10"

[features]
log-trace = []
trace-pmm = ["boss_common/trace-pmm"]
trace-malloc = ["boss_common/trace-malloc"]
trace-hal-video = ["boss_common/trace-hal-video"]
# Disassemble BEAM files and trace BEAM interpreter execution
trace-beam = []
# Trace messages between BEAM processes
trace-messages = []
