[package]
name = "boss_emu"
version = "0.1.0"
edition = "2021"

[dependencies]
boss_common = { path = "../boss_common" }
log = { workspace = true }
spin = { workspace = true }
hashbrown = { workspace = true }
miniz_oxide = { workspace = true }
num-bigint = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bincode = { workspace = true }

[build-dependencies]
regex = "1.10"

[features]
log-trace = []
log-debug = []
trace-pmm = ["boss_common/trace-pmm"]
trace-malloc = ["boss_common/trace-malloc"]
trace-hal-video = ["boss_common/trace-hal-video"]
# Disassemble BEAM files and trace BEAM interpreter execution
trace-beam = []
# Trace messages between BEAM processes
trace-messages = []
# Run target abstraction tests
run-tests = []
